--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,6 @@
     font-weight: 500;
     margin-right: 40px;
 }
-
 .navbar .btnLogin-popup {
     position: relative;
     background: transparent;
@@ -46,8 +45,7 @@
     font-weight: 500;
     cursor: pointer;
 }
-
-navbar .btnLogin-popup::before{
+.navbar .btnLogin-popup::before{
     content: '';
     position: absolute;
     left: 0;
@@ -80,10 +78,42 @@ navbar .btnLogin-popup::before{
     justify-content: center;
     flex-direction: column;
     padding: 0 40px;
+    opacity: 0;
+    pointer-events: none;
+}
+.wrapper.active-popup{
+    opacity: 1;
+    pointer-events: auto;
 }
 
+.icon-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    color: #fff;
+    cursor:pointer;
+    justify-content: center;
+    align-items: center;
+}
+.icon-close i{
+    font-size: 32px;
+}
 .wrapper .logreg-box {
     width: 100%;
+}
+.wrapper .form-box.login{
+    display: block;
+}
+.wrapper.active .form-box.login{
+    display: none;
+}
+.wrapper .form-box.register{
+    display: none;
+}
+.wrapper.active .form-box.register{
+    display: block;
 }
 
 .logreg-box .logreg-title {
@@ -91,7 +121,6 @@ navbar .btnLogin-popup::before{
     margin-bottom: 40px;
     color: #fff;
 }
-
 .logreg-title h2{
     font-size: 32px;
 }
@@ -99,7 +128,6 @@ navbar .btnLogin-popup::before{
     font-size: 14px;
     font-weight: 500;
 }
-
 .logreg-box .input-box{
     position: relative;
     width: 100%;
@@ -107,6 +135,7 @@ navbar .btnLogin-popup::before{
     margin: 30px 0;
     border-bottom: 2px solid #fff;
 }
+
 .input-box input{
     width: 100%;
     height: 100%;
@@ -129,12 +158,10 @@ navbar .btnLogin-popup::before{
     pointer-events: none;
     transition: .5s;
 }
-
 .input-box input:focus~label,
--input-box input:valid~label{
+.input-box input:valid~label{
     top: -5px;
 }
-
 .input-box .icon{
     position: absolute;
     top: 50%;
@@ -153,16 +180,15 @@ navbar .btnLogin-popup::before{
     justify-content: space-between;
     margin-bottom: 15px;
 }
+
 .remember-forgot label input {
     accent-color: #fff;
     margin-right: 3px;
 }
-
 .remember-forgot a{
     color: #fff;
     text-decoration: none;
 }
-
 .remember-forgot a:hover{
     text-decoration: underline;
 }
@@ -180,7 +206,6 @@ navbar .btnLogin-popup::before{
     color: #222;
     font-weight: 600;
 }
-
 .logreg-box .logreg-link {
     font-size: 14.5px;
     color: #fff;
@@ -194,7 +219,6 @@ navbar .btnLogin-popup::before{
     text-decoration: none;
     font-weight: 600;    
 }
-
 .logreg-link p a:hover{
     text-decoration: underline;
 }
